Fix GitHub push issue: Move videos to public directory and update Hero component

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,12 @@ src/assets/*.jpeg
 src/assets/*.gif
 src/assets/*.webp
 src/assets/*.svg
+src/assets/*.mp4
+src/assets/*.MP4
+src/assets/*.webm
+src/assets/*.mov
+src/assets/*.avi
+src/assets/*.mkv
 !src/assets/icons/
 !src/assets/logo/
 
