--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://princevibe-eccomerce-backend-production.up.railway.app/api
+VITE_API_BASE_URL=https://your-backend-url.railway.app/api
