--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@stripe/stripe-js": "^7.3.1",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "sass": "^1.81.0",
+    "terser": "^5.42.0",
     "vite": "^5.4.10"
   }
 }
